moved back button and tooltip uniformity

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 				<h4 style="color:gray" class="divnames3">Pharmacy Paths</h4>
 			</div>
 		
-	<button type="button" class="back" id="backButton">Back</button>
+	<button type="button" class="back" id="backButton"><img id="imgsrc" src="images/back-arrow.svg"></button>
 	<div id="patientHeader">
 	</div>
 
