--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 		</div>
 		
 		<div class="row" id="maps">
-            <div class="col-md-6" id="patient" style="border: 5px solid black; border-left: 10px solid black">
+            <div class="col-md-6" id="patient" style="border: 5px solid black; border-left: 10px solid black; border-right: 10px solid black">
                 <svg width=400px id="patsvg" height="400px"></svg>
                
             </div>
-			<div class="col-md-6" id="paths" style="border: 5px solid black; border-right: 10px solid black">
+			<div class="col-md-6" id="paths" style="border: 5px solid black; border-left: none; border-right: 10px solid black">
                 <svg width=400px id="pathsvg" height="400px"></svg>
             </div>
         </div>
@@ -63,11 +63,11 @@
 			</div>
 		</div>
         <div class="row" id="gantt-items" style="background-color: #202020; border: 5px solid black; border-left: 10px solid black;border-right: 10px solid black">
-			<div class="col-md-6" id="network" style="border-right: 5px solid black">
+			<div class="col-md-6" id="network" style="border-right: 10px solid black">
 			 </div>
-			<div class="col-md-6" id="gantt-chart" style="border-left: 5px solid black">
+			<div class="col-md-6" id="gantt-chart" >
 			</div>
-			<div class="col-md-6" id="gantt-filters"  style="border-left: 5px solid black" >
+			<div class="col-md-6" id="gantt-filters" >
 			</div>
        </div>
 	   
@@ -90,7 +90,7 @@
 
     </div>
     <script>
-
+    $('leaflet-bottom.leaflet-right').remove();
 	d3.queue()
     .defer(d3.csv,"https://gist.githubusercontent.com/tehwentzel/24bf8357ad86a3db70510480b020d7d3/raw/4468783d3445b83b4350ac1c1327a0b592c8cfdf/455_pharmacies.csv")
     .defer(d3.csv,"https://gist.githubusercontent.com/tehwentzel/24bf8357ad86a3db70510480b020d7d3/raw/4468783d3445b83b4350ac1c1327a0b592c8cfdf/500_doctors.csv")
