--- a/index.html
+++ b/index.html
@@ -31,16 +31,15 @@
 
     <div class="container-fluid">
 			<div class="row mt-0 p-0">
-			<div class='col-md-2'>
+			<div class='col-md-3'>
 					
-                    <button id="DIRECTID">SUBMIT</button>
+                    
                         
-                            <input type="text" id="myVal" value="2098621" required="required" placeholder="ENTER ID">
-                      
+                    <input type="text" style="display:inline-block; margin-left: 4px" id="myVal" value="2098621" required="required" placeholder="ENTER ID"> <button id="DIRECTID" style="background-color: black; border-radius: 4px;border:1px solid gray; float:left">Go  </button>
 
 				<!-- <img id="imgsrc" src="patient.svg"><h4 id='timeline-title' class='id'>: 2098621</h4> -->
 			</div>
-			<div class='col-md-8'>
+			<div class='col-md-7'>
 				
 				<center><h3 class="class="jumbotron" style="display:inline-block; color:lightgray;">
 					Identifying Opioid Abuse in Chicagoland Area
