--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <script>
 	var backStack = new Array();
 
-    $('leaflet-bottom.leaflet-right').remove();
+    // $('leaflet-bottom.leaflet-right').remove();
 	d3.queue()
     .defer(d3.csv,"https://gist.githubusercontent.com/tehwentzel/24bf8357ad86a3db70510480b020d7d3/raw/4468783d3445b83b4350ac1c1327a0b592c8cfdf/455_pharmacies.csv")
     .defer(d3.csv,"https://gist.githubusercontent.com/tehwentzel/dffda18347efbfeae22b0e68841a970b/raw/5e8b2a9c53814a124dc9e99f19d683adc9191748/500_doctors.csv")
@@ -121,7 +121,7 @@
 		
 		var selectCurrentId = function(){
 		//sets the id in views 2-3 to currentSelection (the person who was just clicked, ideally)
-			d3.selectAll('.tooltippatient').remove();
+			// d3.selectAll('.tooltippatient').remove();
 			//these need to before paths = pathMap... for the backbutton to draw the path always
 			let was_patient = is_patient;
 			is_patient = (currentSelection.type == "Patient");
@@ -230,7 +230,7 @@
 		var selected_id = 2098621;
 		var patientMap = getMap('patient', colorPicker);
 		//function that draws map for top right
-		var pathMap = getMap('paths', colorPicker);
+		var pathMap = getMap('paths', colorPicker, DOCTOR_LOC);
 		//preload someone?
 		//for the stack
 		var currentSelection = {id: selected_id, type: "Patient"};
