--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
     <!-- CSS Source -->
  <link rel="stylesheet" href="./styles/main.css" />
-    <link href='https://api.mapbox.com/mapbox.js/v2.2.3/mapbox.css' rel='stylesheet' />
+    <!-- <link href='https://api.mapbox.com/mapbox.js/v2.2.3/mapbox.css' rel='stylesheet' /> -->
+	<link href='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.css' rel='stylesheet' />
 	
 
     <!-- JS Libraries -->
@@ -17,7 +18,8 @@
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.2.6/d3.min.js"></script>
-	<script src='https://api.mapbox.com/mapbox.js/v2.2.3/mapbox.js'></script>
+	<!-- <script src='https://api.mapbox.com/mapbox.js/v2.2.3/mapbox.js'></script> -->
+	<script src='https://api.mapbox.com/mapbox.js/v3.3.1/mapbox.js'></script>
 
     <!-- JS Source -->
 	<script src="./scripts/timeline.js"></script>
